[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hud.gd" type="Script" id=1]

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -304.0
margin_right = -34.0
margin_bottom = -304.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.8369
margin_top = 21.3268
margin_right = 197.837
margin_bottom = 53.3268
text = "Nama : Adib Siddhi Adhipta
NIM	   ; 19/444034/TK/49230"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.9
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -284.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 412.0
margin_bottom = 20.0

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reset"

[node name="Triangle" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Triangle"

[node name="Square" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Square"

[node name="Bear" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Bear"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 412.0
margin_bottom = 260.0
custom_constants/vseparation = 4
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 1.0
margin_right = 102.0
margin_bottom = 15.0
text = "Translation X"

[node name="TranslationSX" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_right = 412.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
min_value = -5.0
max_value = 5.0
step = 0.5
rounded = true

[node name="Label5" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 21.0
margin_right = 102.0
margin_bottom = 35.0
text = "Translation Y"

[node name="TranslationSY" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 20.0
margin_right = 412.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 0 )
min_value = -5.0
max_value = 5.0
step = 0.5
rounded = true

[node name="Label8" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 41.0
margin_right = 102.0
margin_bottom = 55.0
text = "Translation Z"

[node name="TranslationSZ" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 40.0
margin_right = 412.0
margin_bottom = 56.0
rect_min_size = Vector2( 300, 0 )
min_value = -5.0
max_value = 5.0
step = 0.5
rounded = true

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 102.0
margin_bottom = 75.0
text = "Rotation X"

[node name="RotSX" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 60.0
margin_right = 412.0
margin_bottom = 76.0
rect_min_size = Vector2( 300, 0 )
min_value = -180.0
max_value = 180.0
rounded = true

[node name="Label9" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 81.0
margin_right = 102.0
margin_bottom = 95.0
text = "Rotation Y"

[node name="RotSY" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 80.0
margin_right = 412.0
margin_bottom = 96.0
rect_min_size = Vector2( 300, 0 )
min_value = -180.0
max_value = 180.0
rounded = true

[node name="Label10" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 101.0
margin_right = 102.0
margin_bottom = 115.0
text = "Rotation Z"

[node name="RotSZ" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 100.0
margin_right = 412.0
margin_bottom = 116.0
rect_min_size = Vector2( 300, 0 )
min_value = -180.0
max_value = 180.0
rounded = true

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 121.0
margin_right = 102.0
margin_bottom = 135.0
text = "Scale X Relative"

[node name="ScaleSX" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 120.0
margin_right = 412.0
margin_bottom = 136.0
rect_min_size = Vector2( 300, 0 )
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0
exp_edit = true

[node name="Label6" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 141.0
margin_right = 102.0
margin_bottom = 155.0
text = "Scale Y Relative"

[node name="ScaleSY" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 140.0
margin_right = 412.0
margin_bottom = 156.0
rect_min_size = Vector2( 300, 0 )
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0
exp_edit = true

[node name="Label11" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 161.0
margin_right = 102.0
margin_bottom = 175.0
text = "Scale Z Relative"

[node name="ScaleSZ" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 160.0
margin_right = 412.0
margin_bottom = 176.0
rect_min_size = Vector2( 300, 0 )
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0
exp_edit = true

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 181.0
margin_right = 102.0
margin_bottom = 195.0
text = "Shear X Relative"

[node name="ShearSX" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 180.0
margin_right = 412.0
margin_bottom = 196.0
rect_min_size = Vector2( 300, 0 )
max_value = 3.0
step = 0.1

[node name="Label7" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 201.0
margin_right = 102.0
margin_bottom = 215.0
text = "Shear Y Relative"

[node name="ShearSY" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 200.0
margin_right = 412.0
margin_bottom = 216.0
rect_min_size = Vector2( 300, 0 )
max_value = 3.0
step = 0.1

[node name="Label12" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 221.0
margin_right = 102.0
margin_bottom = 235.0
text = "Shear Z Relative"

[node name="ShearSZ" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 220.0
margin_right = 412.0
margin_bottom = 236.0
rect_min_size = Vector2( 300, 0 )
max_value = 3.0
step = 0.1
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Triangle" to="." method="_on_Triangle_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Square" to="." method="_on_Square_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Bear" to="." method="_on_Bear_pressed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/TranslationSX" to="." method="_on_TranslationSX_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/TranslationSY" to="." method="_on_TranslationSY_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/TranslationSZ" to="." method="_on_TranslationSZ_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RotSX" to="." method="_on_RotSX_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RotSY" to="." method="_on_RotSY_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RotSZ" to="." method="_on_RotSZ_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ScaleSX" to="." method="_on_ScaleSX_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ScaleSY" to="." method="_on_ScaleSY_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ScaleSZ" to="." method="_on_ScaleSZ_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ShearSX" to="." method="_on_ShearSX_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ShearSY" to="." method="_on_ShearSY_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ShearSZ" to="." method="_on_ShearSZ_value_changed"]
